# magnascale-automation

./: README.md  pyproject.toml
magnascale_automation/command/: __init__.py
magnascale_automation/command/dallas/: main.py  web_service.py
magnascale_automation/command/dallas/interactive/: menu.py
magnascale_automation/command/interactive/: menu.py
magnascale_automation/command/interactive/action/: cluster.py  node.py
magnascale_automation/command/lisa/: main.py  web_service.py
magnascale_automation/tests/: test_caculator.py
