[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"  # Use PEP 440 style versioning
dirty = true  # Add ".dirty" suffix if there are uncommitted changes
format = "{base}.dev{distance}"  # Format version as {base}.dev{distance}

[tool.poetry]
name = "magnascale-automation"
version = "0.0.0"
description = ""
authors = ["Xu Jay <jay.xu@lenovonetapp.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "3.11.9"
click = "8.1.7"
rich = "13.9.4"

[tool.poetry.group.dev.dependencies]
ddt = "1.7.2"
pytest = "8.3.4"
black = "24.10.0"
flake8 = "7.1.1"

[tool.poetry.scripts]
test = "pytest:main"
dallas = "magnascale_automation.command.dallas.main:main"
lisa = "magnascale_automation.command.lisa.main:main"





